[gd_scene load_steps=12 format=2]

[ext_resource path="res://VibratingTile/StoneTile.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://VibratingTile/VibratingTile.gd" type="Script" id=4]
[ext_resource path="res://Dialog-System-Example/Dialog_Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://VibratingTile/VibratingTileHitbox.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[sub_resource type="Animation" id=3]
resource_name = "IdleAnim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 12 ), Vector2( 0, 12 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "VibrateFast"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 8 ), Vector2( 4, 8 ), Vector2( 0, 12 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.5, 11.5 ), Vector2( 0.5, 11.5 ), Vector2( 0, 12 ) ]
}

[node name="VibratingTile" type="Node2D" groups=[
"OtterNode",
]]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 10 )
collision_layer = 16
collision_mask = 4
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, 11 )
shape = SubResource( 2 )

[node name="Dialog_Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -88, -24 )
z_index = 100

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleAnim = SubResource( 3 )
anims/VibrateFast = SubResource( 4 )
anims/VibrateSlow = SubResource( 5 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_player_close"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_player_not_close"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
